--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Test
         run: |
-          go test `go list ./... | grep -v internal` -coverprofile=coverage.txt -covermode=atomic
+          go test ./... -coverprofile=coverage.txt -covermode=atomic
 #      - name: Upload coverage report
 #        uses: codecov/codecov-action@v1.0.2
 #        with:
