feat: BYU-11 SQL Driver 작성
기본 코드 작성

ci 코드 추가

ci 코드 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,11 @@ jobs:
           role-session-name: AssetsUploadSession
 
       - name: Test
+        env:
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_TYPE: ${{ secrets.DB_TYPE }}
+          AWS_RESOURCE_ARN: ${{ secrets.AWS_RESOURCE_ARN }}
+          AWS_SECRET_ARN: ${{ secrets.AWS_SECRET_ARN }}
         run: |
           go test ./... -coverprofile=coverage.txt -covermode=atomic
 #      - name: Upload coverage report
